--- a/cox.Rmd
+++ b/cox.Rmd
@@ -259,11 +259,9 @@ cox_model_tv = coxph(
   method = 'breslow',
   control = coxph.control(iter.max = 1000)
 )
-# cox_model_tv; cox_model_tv$loglik[2]
 
-summary(cox_model_tv)$coefficients
-
-result_tbl
+# cox_model_tv
+# cox_model_tv$loglik[2]
 ```
 
 ```{r coxtv-compare-show, echo=FALSE}
@@ -359,7 +357,9 @@ cox_strata_model = coxph(
   Surv(futime, fustat) ~ age + ecog.ps + strata(rx), 
   data = ovarian
   )
-# cox_strata_model; cox_strata_model$loglik[2]
+
+# cox_strata_model
+# cox_strata_model$loglik[2]
 ```
 
 
