--- a/heckman-selection.Rmd
+++ b/heckman-selection.Rmd
@@ -5,6 +5,9 @@ This demonstration of the Heckman selection model is based on Bleven's example
 which is more or less the 'classic' example regarding women's wages, variations
 of which you'll find all over.
 
+
+## Data Setup
+
 Description of the data:
 
 - Draw 10,000 obs at random 
@@ -17,10 +20,6 @@ Generate missing data for wearnl drawn z from standard normal [0,1].  z is actua
 - d\*=-1.5+0.15\*educ+0.01\*age+0.15\*z+v
 - wearnl missing if d\*≤0 wearn reported if d\*>0
 - wearnl_all = wearnl with non-missing obs
-
-
-
-## Data Setup
 
 ```{r heckman-setup}
 library(tidyverse)
@@ -47,9 +46,6 @@ d = data.frame(wearnl, educ, age, z, observed_index)
 ```
 
 
-
-
-
 Examine linear regression approaches if desired.
 
 ```{r heckman-comparison-models}
@@ -62,10 +58,6 @@ lm_obs = lm(wearnl ~ educ + age, data=d[observed_index,])
 summary(lm_all)
 summary(lm_obs) # smaller coefs, resid standard error
 ```
-
-
-
-
 
 
 ## Two step approach
@@ -107,6 +99,7 @@ ggplot2::qplot(imr, geom = 'histogram')
 
 
 ### Step 2: Estimate via Linear Regression
+
 Standard regression model using the inverse mills ratio as covariate
 
 ```{r heckman-step-2}
@@ -177,7 +170,7 @@ init = c(coef(probit), coef(lm_select)[-4],  1, 0)
 Estimate via <span class="func" style = "">optim</span>. Without bounds for sigma and rho you'll get warnings, but does fine anyway
 
 ```{r heckman-estimate}
-heckman_ml_unbounded = optim(
+fit_unbounded = optim(
   init,
   select_ll,
   X = X[, -4],
@@ -189,7 +182,7 @@ heckman_ml_unbounded = optim(
   hessian = T
 )
 
-heckman_ml_bounded = optim(
+fit_bounded = optim(
   init,
   select_ll,
   X = X[, -4],
@@ -224,8 +217,8 @@ tibble(
   model = rep(c('probit', 'lm', 'both'), c(4, 4, 1)),
   par   = names(coef(selection_ml)),
   sampselpack_ml = coef(selection_ml),
-  unbounded_ml   = heckman_ml_unbounded$par,
-  bounded_ml     = heckman_ml_bounded$par,
+  unbounded_ml   = fit_unbounded$par,
+  bounded_ml     = fit_bounded$par,
   explicit_twostep = c(
     coef(probit),
     coef(lm_select)[1:3],
@@ -244,10 +237,10 @@ tibble(
     -selection_ml$hessian
   ))),
   unbounded_ml = sqrt(diag(solve(
-    heckman_ml_unbounded$hessian
+    fit_unbounded$hessian
   ))),
   bounded_ml = sqrt(diag(solve(
-    heckman_ml_bounded$hessian
+    fit_bounded$hessian
   ))),
   explicit_twostep = c(
     summary(probit)$coefficients[, 2],
