--- a/cfa.Rmd
+++ b/cfa.Rmd
@@ -7,17 +7,17 @@ This mostly follows Bollen (1989) for maximum likelihood estimation of a confirm
 
 ## Data Setup
 
+For the data we will simulate observed variables with specific loadings on two latent constructs (factors).
+
 ```{r cfa-setup}
 library(tidyverse)
-library(mvtnorm)
-library(psych)
 
 set.seed(123)
 
 # loading matrix
 lambda = matrix(
-  c(1,.5,.3,.6,0,0,0,0,
-    0,0,0,0,1,.7,.4,.5),
+  c(1.0, 0.5, 0.8, 0.6, 0.0, 0.0, 0.0, 0.0,
+    0.0, 0.0, 0.0, 0.0, 1.0, 0.7, 0.6, 0.8), 
   nrow = 2, 
   byrow = TRUE
 )
@@ -26,22 +26,22 @@ lambda = matrix(
 phi = matrix(c(1, .25, .25, 1), nrow = 2, byrow = TRUE)  
 
 # factors and some noise
-factors = rmvnorm(1000, mean = rep(0, 2), sigma = phi, "chol")
-e = rmvnorm(1000, sigma = diag(8))
+factors = mvtnorm::rmvnorm(1000, mean = rep(0, 2), sigma = phi, "chol")
+e = mvtnorm::rmvnorm(1000, sigma = diag(8))
 
 # observed responses
 y = 0 + factors%*%lambda + e
 
 # Examine
 #dim(y)
-describe(y)
-round(cor(y), 3)
+psych::describe(y)
+# round(cor(y), 2)
 
-#see the factor structure
-cor.plot(cor(y))
+# see the factor structure
+psych::cor.plot(cor(y))
 
 # example exploratory fa
-#fa(y, nfactors=2, rotate="oblimin") 
+#psych::fa(y, nfactors=2, rotate="oblimin") 
 ```
 
 
@@ -51,9 +51,17 @@ cor.plot(cor(y))
 
 ## Functions
 
+We will have two separate estimation functions, one for the covariance matrix,
+and another for the correlation matrix.
 
 ```{r cfa-cov-func}
 # measurement model, covariance approach
+
+# trace function, strangely absent from base R
+tr <- function(mat) {
+  sum(diag(mat), na.rm = TRUE)
+}
+
 cfa_cov <- function (parms, data) {
   # Arguments- 
   # parms: initial values (named)
@@ -61,10 +69,9 @@ cfa_cov <- function (parms, data) {
   
   # Extract parameters by name
   
-  require(psych) # for tr
-  
   l1 = c(1, parms[grep('l1', names(parms))])      # loadings for factor 1
   l2 = c(1, parms[grep('l2', names(parms))])      # loadings for factor 2
+  
   cov0 = parms[grep('cov', names(parms))]         # factor covariance, variances
   
   # Covariance matrix
@@ -92,19 +99,18 @@ cfa_cov <- function (parms, data) {
   # a reduced version; Bollen 1989 p.107
   # ll = -(log(det(sigtheta)) + tr(S%*%solve(sigtheta)) - log(det(S)) - pq) 
   
-  # should be same as Mplus H0 loglike
+  # this should be the same as Mplus H0 log likelihood
   ll = ( (-nrow(data)*pq/2) * log(2*pi) ) - 
     (nrow(data)/2) * ( log(det(sigtheta)) + tr(S%*%solve(sigtheta)) )
   
-  ll
+  -ll
 }
 ```
 
-Correlation approach for standardized results. Lines correspond to those in `cfa_cov`.
+We can use the correlation matrix for standardized results. Lines correspond to those in `cfa_cov`.
 
 ```{r cfa-cor-func}
 cfa_cor <- function (parms, data) {
-  require(psych)
   
   l1 = parms[grep('l1', names(parms))]      # loadings for factor 1
   l2 = parms[grep('l2', names(parms))]      # loadings for factor 2
@@ -130,12 +136,15 @@ cfa_cor <- function (parms, data) {
   ll = ( (-nrow(data)*pq/2) * log(2*pi) ) - 
     (nrow(data)/2) * ( log(det(sigtheta)) + tr(S%*%solve(sigtheta)) )
   
-  ll
+  -ll
 }
 ```
 
 
 ## Estimation
+
+Corresponding to the functions, we will get results based on the covariance and
+correlation matrix respectively.
 
 ### Raw
 
@@ -150,21 +159,20 @@ names(par_init_cov) = rep(c('l1','l2', 'dist', 'cov'), c(3, 3, 8, 3))
 Estimate and extract.
 
 ```{r cfa-cov-est}
-result_cov = optim(
+fit_cov = optim(
   par  = par_init_cov,
   fn   = cfa_cov,
   data = y,
   method  = "L-BFGS-B",
-  lower   = 0,
-  control = list(fnscale = -1)
+  lower   = 0
 ) 
 
 loadings_cov = data.frame(
-  f1 = c(1, result_cov$par[1:3], rep(0, 4)),
-  f2 = c(rep(0, 4), 1, result_cov$par[4:6])
+  f1 = c(1, fit_cov$par[1:3], rep(0, 4)),
+  f2 = c(rep(0, 4), 1, fit_cov$par[4:6])
 )
 
-disturbances_cov = result_cov$par[7:14]
+disturbances_cov = fit_cov$par[7:14]
 ```
 
 
@@ -177,34 +185,33 @@ names(par_init_cor) = rep(c('l1', 'l2', 'dist', 'cor'), c(4, 4, 8, 1))
 ```
 
 ```{r cfa-cor-est}
-result_cor = optim(
+fit_cor = optim(
   par  = par_init_cor,
   fn   = cfa_cor,
   data = y,
-  method  = "L-BFGS-B",
-  lower   = 0,
-  upper   = 1,
-  control = list(fnscale = -1)
+  method = "L-BFGS-B",
+  lower  = 0,
+  upper  = 1
 )
 
 loadings_cor = matrix(
-  c(result_cor$par[1:4], rep(0, 4), rep(0, 4), result_cor$par[5:8]), 
+  c(fit_cor$par[1:4], rep(0, 4), rep(0, 4), fit_cor$par[5:8]), 
   ncol = 2
 )
 
-disturbances_cor = result_cor$par[9:16]
+disturbances_cor = fit_cor$par[9:16]
 ```
 
 
 ## Comparison
 
-Gather results for summary
+Gather results for summarizing.
 
 ```{r cfa-all}
 results = list(
   raw = list(
     loadings = round(data.frame(loadings_cov, Variances = disturbances_cov), 3),
-    cov.fact = round(matrix(c(result_cov$par[c(15, 16, 16, 17)]), ncol =2) , 3)
+    cov.fact = round(matrix(c(fit_cov$par[c(15, 16, 16, 17)]), ncol = 2) , 3)
   ),
   
   standardized = list(
@@ -214,14 +221,14 @@ results = list(
         Variances = disturbances_cor,
         Rsq = (1 - disturbances_cor)
       ), 3),
-    cor.fact = round(matrix(c(1, result_cor$par[c(17, 17)], 1), ncol = 2), 3)
+    cor.fact = round(matrix(c(1, fit_cor$par[c(17, 17)], 1), ncol = 2), 3)
   ),
   
   # note inclusion of intercepts for total number of par
-  fit = data.frame(
-    ll  = result_cov$value,
-    AIC = -2 * result_cov$value + 2 * (length(par_init_cov) + ncol(y)),
-    BIC = -2 * result_cov$value + log(nrow(y)) * (length(par_init_cov) + ncol(y))
+  fit_lav = data.frame(
+    ll  = fit_cov$value,
+    AIC = 2*fit_cov$value + 2 * (length(par_init_cov) + ncol(y)),
+    BIC = 2*fit_cov$value + log(nrow(y)) * (length(par_init_cov) + ncol(y))
   )  
 )
 
@@ -229,21 +236,40 @@ results
 ```
 
 
-Confirm with <span class="pack" style = "">lavaan</span>.
+Compare with <span class="pack" style = "">lavaan</span>.
 
 ```{r cfa-lavaan}
 library(lavaan)
 y = data.frame(y)
-model = ' F1  =~ X1 + X2 + X3 + X4
-           F2  =~ X5 + X6 + X7 + X8 '
+model = '
+  F1  =~ X1 + X2 + X3 + X4
+  F2  =~ X5 + X6 + X7 + X8
+'
 
-fit = cfa(model, data=y, mimic='Mplus', estimator='ML')
-fit.std = cfa(model, data=y, mimic='Mplus', estimator='ML', std.lv=T, std.ov=T) # for standardized
+fit_lav = cfa(
+  model,
+  data  = y,
+  mimic = 'Mplus',
+  estimator = 'ML'
+)
 
-# note that lavaan does not count the intercepts among the free params for AIC/BIC 
-# by default, but the mimic='Mplus' should have them correspond to optim's results
-summary(fit, fit.measures=TRUE, standardized=T)   
+fit_lav_std = cfa(
+  model,
+  data  = y,
+  mimic = 'Mplus',
+  estimator = 'ML',
+  std.lv = TRUE,
+  std.ov = TRUE
+) 
 
+# note that lavaan does not count the intercepts among the free params for
+# AIC/BIC by default, (can get its result via -2 * as.numeric(lls) + k *
+# attr(lls, "df")), but the mimic='Mplus' should have them correspond to optim's
+# results
+
+summary(fit_lav,
+        fit.measures = TRUE,
+        standardized = TRUE)   
 ```
 
 
