--- a/cubic-spline.Rmd
+++ b/cubic-spline.Rmd
@@ -1,19 +1,20 @@
 # Cubic Spline Model
 
 
-See Wood (2017) Generalized Additive Models or my [document](https://m-clark.github.io/generalized-additive-models/).
+See Wood (2017) Generalized Additive Models or my [document](https://m-clark.github.io/generalized-additive-models/) for an introduction to generalized additive models.  
 
 
 ## Data Setup
 
+The data regards engine wear index versus engine capacity for 19 Volvo car engines used.  The idea is that a larger car engine will wear out less quickly than a smaller one (from Wood GAM 2e chapter 4). 
+
 ```{r cs-setup}
 library(tidyverse)
 
-size = c(1.42,1.58,1.78,1.99,1.99,1.99,2.13,2.13,2.13,
-         2.32,2.32,2.32,2.32,2.32,2.43,2.43,2.78,2.98,2.98)
+data(engine, package = 'gamair')
 
-wear = c(4.0,4.2,2.5,2.6,2.8,2.4,3.2,2.4,2.6,4.8,2.9,
-         3.8,3.0,2.7,3.1,3.3,3.0,2.8,1.7)
+size = engine$size
+wear = engine$wear
 
 x = size - min(size)
 x = x / max(x)
@@ -22,12 +23,12 @@ d = data.frame(wear, x)
 
 ## Functions
 
-Cubic spline function.
+Cubic spline function, `rk` refers to [reproducing kernel][Reproducing Kernel Hilbert Space Regression]. If I recall correctly, the function code is actually based on the first edition of Wood's text.
 
 ```{r cs-func}
 rk <- function(x, z) {
-  ((z-0.5)^2 - 1/12) * ((x-0.5)^2 - 1/12)/4 -
-    ((abs(x-z)-0.5)^4 - (abs(x-z)-0.5)^2/2 + 7/240) / 24
+  ((z - 0.5)^2 - 1/12) * ((x - 0.5)^2 - 1/12)/4 -
+    ((abs(x - z) - 0.5)^4 - (abs(x - z) - 0.5)^2 / 2 + 7/240) / 24
 }
 ```
 
@@ -56,8 +57,8 @@ splS <- function(knots) {
 Matrix square root function. Note that there are various packages with their own.
 
 ```{r cs-mat-sqrt}
-matSqrt <- function(S) {
-  d  = eigen(S, symmetric = T)
+mat_sqrt <- function(S) {
+  d  = eigen(S, symmetric = TRUE)
   rS = d$vectors %*% diag(d$values^.5) %*% t(d$vectors)
   rS
 }
@@ -66,11 +67,11 @@ matSqrt <- function(S) {
 Penalized fitting function.
 
 ```{r cs-fit}
-prsFit <- function(y, x, knots, lambda) {
+prs_fit <- function(y, x, knots, lambda) {
   q  = length(knots) + 2    # dimension of basis
   n  = length(x)            # number of observations
-  Xa = rbind(splX(x, knots), matSqrt(splS(knots))*sqrt(lambda)) # augmented model matrix
-  y[(n+1):(n+q)] = 0        # augment the data vector
+  Xa = rbind(splX(x, knots), mat_sqrt(splS(knots))*sqrt(lambda)) # augmented model matrix
+  y[(n + 1):(n+q)] = 0      # augment the data vector
   
   lm(y ~ Xa - 1) # fit and return penalized regression spline
 }
@@ -84,23 +85,23 @@ We start with an unpenalized approach.
 
 ```{r cs-unpenal}
 knots = 1:4/5
-X = splX(x, knots)      # generate model matrix
-mod1 = lm(wear ~ X - 1) # fit model
+X = splX(x, knots)            # generate model matrix
 
-xp = 0:100/100 # x values for prediction
-Xp = splX(xp, knots) # prediction matrix
+fit_lm  = lm(wear ~ X - 1)    # fit model
+
+xp = 0:100/100                # x values for prediction
+Xp = splX(xp, knots)          # prediction matrix
 ```
 
-Visualize
+Visualize.
 
 ```{r cs-unpenal-vis}
 ggplot(aes(x = x, y = wear), data = data.frame(x, wear)) +
   geom_point(color = "#FF5500") +
-  geom_line(aes(x = xp, y = Xp %*% coef(mod1)),
+  geom_line(aes(x = xp, y = Xp %*% coef(fit_lm)),
             data = data.frame(xp, Xp),
             color = "#00AAFF") +
-  labs(x = 'Scaled Engine size', y  = 'Wear Index') +
-  theme_minimal()
+  labs(x = 'Scaled Engine size', y  = 'Wear Index')
 ```
 
 
@@ -108,15 +109,18 @@ ggplot(aes(x = x, y = wear), data = data.frame(x, wear)) +
 
 ## Example 2
 
-Add `lambda` penalty.
+Now we add the `lambda` penalty and compare fits at different values of `lambda`.
 
 ```{r cs-penal}
 knots = 1:7/8
 d2 = data.frame(x = xp)
+lambda = c(.1, .01, .001, .0001, .00001, .000001)
+rmse   = vector('numeric', length(lambda))
+idx = 0
 
-for (i in c(.1, .01, .001, .0001, .00001, .000001)){
+for (i in lambda) {
   # fit penalized regression
-  mod2 = prsFit(
+  fit_penalized = prs_fit(
     y = wear,
     x = x,
     knots = knots,
@@ -124,27 +128,46 @@ for (i in c(.1, .01, .001, .0001, .00001, .000001)){
   ) 
   # spline choosing lambda
   Xp = splX(xp, knots) # matrix to map parameters to fitted values at xp
-  LP = Xp %*% coef(mod2)
+  LP = Xp %*% coef(fit_penalized)
   d2[, paste0('lambda = ', i)] = LP[, 1]
+  
+  r = resid(fit_penalized)
+  idx = 1 + idx
+  
+  rmse[idx] = sqrt(mean(r^2))
 }
 ```
 
 
 
-Visualize.
+Visualize. I add the root mean square error for model comparison.
 
 ```{r cs-penal-vis}
 d3 = d2 %>%
   pivot_longer(cols = -x,
                names_to  = 'lambda',
                values_to = 'value') %>% 
-  mutate(lambda = fct_inorder(lambda))
+  mutate(lambda = fct_inorder(lambda),
+         rmse   = round(rmse[lambda], 3))
+```
 
+
+```{r cs-penal-vis-show, echo=FALSE}
 ggplot(d3) +
   geom_point(aes(x = x, y = wear), col = '#FF5500', data = d) +
   geom_line(aes(x = x, y = value), col = "#00AAFF") +
-  facet_wrap(~lambda) +
-  theme_minimal()
+  geom_text(
+    aes(label = glue::glue('rmse: {rmse}')),
+    x  = .33,
+    y = 4.5,
+    size = 2,
+    color = 'gray50'
+  ) +
+  facet_wrap( ~ lambda)
+```
+
+
+```{r cs-penal-vis}
 ```
 
 
