--- a/elm.Rmd
+++ b/elm.Rmd
@@ -26,7 +26,7 @@ y  = rnorm(n, mu, .3)
 
 d = data.frame(x, y) 
 
-qplot(x, y)
+qplot(x, y, color = I('#ff55001A'))
 ```
 
 
@@ -72,23 +72,22 @@ elm <- function(X, y, n_hidden = NULL, active_fun = tanh) {
 ## Estimation
 
 ```{r elm-est1}
-X_mat = as.matrix(x, ncol=1)
+X_mat = as.matrix(x, ncol = 1)
 
-elm_1 = elm(X_mat, y, n_hidden = 100)
-str(elm_1)
+fit_elm = elm(X_mat, y, n_hidden = 100)
+str(fit_elm)
 
 ggplot(aes(x, y), data = d) +
-  geom_point(alpha = .1) + 
-  geom_line(aes(y = elm_1$fit), color = '#1e90ff') + 
-  theme_minimal()
+  geom_point(color = '#ff55001A') + 
+  geom_line(aes(y = fit_elm$fit), color = '#00aaff')
 
-cor(elm_1$fit[,1], y)^2
+cor(fit_elm$fit[,1], y)^2
 ```
 
 
 ```{r  elm-est2}
-elm_2 = elm(times, accel, n_hidden = 100)
-cor(elm_2$fit[,1], accel)^2
+fit_elm_mcycle = elm(times, accel, n_hidden = 100)
+cor(fit_elm_mcycle$fit[,1], accel)^2
 ```
 
 
@@ -99,29 +98,29 @@ cor(elm_2$fit[,1], accel)^2
 We'll compare to a generalized additive model with gaussian process approximation.
 
 ```{r elm-compare1}
-gam_1 = gam(y ~ s(x, bs = 'gp', k = 20), data = d)
-summary(gam_1)$r.sq
+fit_gam = gam(y ~ s(x, bs = 'gp', k = 20), data = d)
+summary(fit_gam)$r.sq
 
 
 d %>%
-  mutate(fit_elm = elm_1$fit,
-         fit_gam = fitted(gam_1)) %>%
+  mutate(fit_elm = fit_elm$fit,
+         fit_gam = fitted(fit_gam)) %>%
   ggplot() +
-  geom_point(aes(x, y), alpha = .1) +
+  geom_point(aes(x, y), color = '#ff55001A') +
   geom_line(aes(x, y = fit_elm), color = '#1e90ff') +
   geom_line(aes(x, y = fit_gam), color = '#990024')
 ```
 
 
 ```{r elm-compare2}
-gam_2 = gam(accel ~ s(times), data = mcycle)
-summary(gam_2)$r.sq
+fit_gam_mcycle = gam(accel ~ s(times), data = mcycle)
+summary(fit_gam_mcycle)$r.sq
 
 mcycle %>% 
   ggplot(aes(times, accel)) +
-  geom_point(alpha = .5) +
-  geom_line(aes(y = elm_2$fit), color = '#1e90ff') +
-  geom_line(aes(y = fitted(gam_2)), color = '#990024')
+  geom_point(color = '#ff55001A') +
+  geom_line(aes(y = fit_elm_mcycle$fit), color = '#1e90ff') +
+  geom_line(aes(y = fitted(fit_gam_mcycle)), color = '#990024')
 ```
 
 
@@ -141,40 +140,40 @@ n_nodes = c(10, 25, 100, 250, 500, 1000)
 The following estimation over multiple models will take several seconds.
 
 ```{r elm-est3}
-elm_3 = map(n_nodes, function(n) elm(X, y, n_hidden = n))
+fit_elm = purrr::map(n_nodes, function(n) elm(X, y, n_hidden = n))
 ```
 
 Now find the best fitting model.
 
 ```{r elm-best}
 # estimate 
-final_n = which.min(map_dbl(elm_3, function(x) x$loss))
-best = elm_3[[final_n]]
+best_loss = which.min(map_dbl(fit_elm, function(x) x$loss))
+fit_best  = fit_elm[[best_loss]]
 ```
 
 A quick check of the fit.
 
 ```{r elm-fit}
-# str(best)
-# qplot(best$fit[, 1], y, alpha = .2)
-cor(best$fit[, 1], y)^2
+# str(fit_best)
+# qplot(fit_best$fit[, 1], y, alpha = .2)
+cor(fit_best$fit[, 1], y)^2
 ```
 
 
 And compare again to <span class="pack" style = "">mgcv</span>.  In this case, we're comparing fit on test data of the same form.
 
 ```{r elm-compare3}
-gam_3 = gam(y ~ s(x0) + s(x1) + s(x2) + s(x3), data = d)
-gam.check(gam_3)
-summary(gam_3)$r.sq
+fit_gam = gam(y ~ s(x0) + s(x1) + s(x2) + s(x3), data = d)
+gam.check(fit_gam)
+summary(fit_gam)$r.sq
 
 
 test_data0 = gamSim(eg = 7)  # default n = 400
-test_data  =  cbind(1, scale(test_data0[,2:5]))
+test_data  = cbind(1, scale(test_data0[, 2:5]))
 
  # remember to use your specific activation function here
-elm_prediction = tanh(test_data %*% best$w0) %*% best$B         
-gam_prediction = predict(gam_3, newdata = test_data0)
+elm_prediction = tanh(test_data %*% fit_best$w0) %*% fit_best$B         
+gam_prediction = predict(fit_gam, newdata = test_data0)
 
 cor(data.frame(elm_prediction, gam_prediction), test_data0$y)^2
 ```
